# kubus

./: Cargo.toml  LICENSE  README.md  flake.nix
kubus/: Cargo.toml
kubus/examples/: basic.rs  derive.rs  manual_impl.rs  mutating_webhook.rs  operator.rs  validating_webhook.rs
kubus/src/: admission.rs  context.rs  error.rs  event_handler.rs  ext.rs  finalizer.rs  lib.rs  operator.rs  scope.rs
kubus_derive/: Cargo.toml
kubus_derive/src/: lib.rs
