[package]
name = "kubus"
description = "Derive based kubernetes operator framework"
version = "0.2.1"
edition = "2024"
homepage = "https://github.com/juliamertz/kubus"
repository = "https://github.com/juliamertz/kubus"
license = "MIT"

[dependencies]
kubus_derive = { path = "../kubus_derive", version = "0.2.0" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
futures = "0.3.31"
json-patch = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
async-trait = "0.1.89"
