[package]
name = "kubus"
description = "Derive based kubernetes operator framework"
version = "0.3.0"
edition = "2024"
homepage = "https://github.com/juliamertz/kubus"
repository = "https://github.com/juliamertz/kubus"
license = "MIT"

[dependencies]
kubus_derive = { path = "../kubus_derive", version = "0.3.0" }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }
json-patch = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
thiserror = "2.0.17"
async-trait = "0.1.89"
