[package]
name = "kubus_derive"
description = "Derive based kubernetes operator framework"
version = "0.5.2"
edition = "2024"
homepage = "https://github.com/juliamertz/kubus"
repository = "https://github.com/juliamertz/kubus"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits", "full"] }
quote = "1"
proc-macro2 = "1"
